parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     eol_instruction -> instruction ;
Rule 5     braced_instructions -> { instructions }
Rule 6     braced_instructions -> instruction ;
Rule 7     instruction -> assign
Rule 8     instruction -> if_instruction
Rule 9     instruction -> iteration_instruction
Rule 10    instruction -> return_instruction
Rule 11    instruction -> break_instruction
Rule 12    instruction -> continue_instruction
Rule 13    instruction -> print_instruction
Rule 14    assign -> variable assign_op expression
Rule 15    assign_op -> =
Rule 16    assign_op -> ADDASSIGN
Rule 17    assign_op -> SUBASSIGN
Rule 18    assign_op -> MULASSIGN
Rule 19    assign_op -> DIVASSIGN
Rule 20    variable -> ID
Rule 21    variable -> ID [ array_ref ]
Rule 22    array_ref -> ID
Rule 23    array_ref -> expression
Rule 24    array_ref -> array_ref , array_ref
Rule 25    expression -> variable
Rule 26    expression -> constant
Rule 27    expression -> unary_expr
Rule 28    expression -> binary_expr
Rule 29    expression -> matrix_init
Rule 30    constant -> INT
Rule 31    constant -> FLOAT
Rule 32    unary_expr -> - expression
Rule 33    unary_expr -> expression TRANSP
Rule 34    binary_expr -> expression + expression
Rule 35    binary_expr -> expression - expression
Rule 36    binary_expr -> expression * expression
Rule 37    binary_expr -> expression / expression
Rule 38    binary_expr -> expression > expression
Rule 39    binary_expr -> expression < expression
Rule 40    binary_expr -> expression EQUAL expression
Rule 41    binary_expr -> expression NOTEQUAL expression
Rule 42    binary_expr -> expression LESSEQUAL expression
Rule 43    binary_expr -> expression GREATEREQUAL expression
Rule 44    binary_expr -> expression DOTADD expression
Rule 45    binary_expr -> expression DOTSUB expression
Rule 46    binary_expr -> expression DOTMUL expression
Rule 47    binary_expr -> expression DOTDIV expression
Rule 48    matrix_init -> ZEROS ( expression )
Rule 49    matrix_init -> ZEROS ( expression , expression )
Rule 50    matrix_init -> ONES ( expression )
Rule 51    matrix_init -> ONES ( expression , expression )
Rule 52    matrix_init -> EYE ( expression )
Rule 53    matrix_init -> [ rows ; row ]
Rule 54    matrix_init -> [ row ]
Rule 55    rows -> rows ; row
Rule 56    rows -> row
Rule 57    row -> row , expression
Rule 58    row -> expression
Rule 59    break_instruction -> BREAK ;
Rule 60    continue_instruction -> CONTINUE ;
Rule 61    return_instruction -> RETURN expression ;
Rule 62    print_instruction -> PRINT string_expressions ;
Rule 63    string_expressions -> string_expressions , string_expression
Rule 64    string_expressions -> string_expression
Rule 65    string_expression -> STRING
Rule 66    string_expression -> expression
Rule 67    if_instruction -> IF ( expression ) instructions
Rule 68    if_instruction -> IF ( expression ) instructions ELSE instructions
Rule 69    if_instruction -> IF ( expression ) instructions else_if_instruction
Rule 70    if_instruction -> IF ( expression ) instructions else_if_instruction ELSE instructions
Rule 71    else_if_instruction -> ELSE IF ( expression ) instructions
Rule 72    else_if_instruction -> ELSE IF ( expression ) instructions else_if_instruction
Rule 73    iteration_instruction -> WHILE ( expression ) braced_instructions
Rule 74    iteration_instruction -> FOR range_expression braced_instructions
Rule 75    range_expression -> ID = expression : expression

Terminals, with rules where they appear

(                    : 48 49 50 51 52 67 68 69 70 71 72 73
)                    : 48 49 50 51 52 67 68 69 70 71 72 73
*                    : 36
+                    : 34
,                    : 24 49 51 57 63
-                    : 32 35
/                    : 37
:                    : 75
;                    : 4 6 53 55 59 60 61 62
<                    : 39
=                    : 15 75
>                    : 38
ADDASSIGN            : 16
BREAK                : 59
CONTINUE             : 60
DIVASSIGN            : 19
DOTADD               : 44
DOTDIV               : 47
DOTMUL               : 46
DOTSUB               : 45
ELSE                 : 68 70 71 72
EQUAL                : 40
EYE                  : 52
FLOAT                : 31
FOR                  : 74
GREATEREQUAL         : 43
ID                   : 20 21 22 75
IF                   : 67 68 69 70 71 72
INT                  : 30
LESSEQUAL            : 42
MULASSIGN            : 18
NOTEQUAL             : 41
ONES                 : 50 51
PRINT                : 62
RETURN               : 61
STRING               : 65
SUBASSIGN            : 17
TRANSP               : 33
WHILE                : 73
ZEROS                : 48 49
[                    : 21 53 54
]                    : 21 53 54
error                : 
{                    : 5
}                    : 5

Nonterminals, with rules where they appear

array_ref            : 21 24 24
assign               : 7
assign_op            : 14
binary_expr          : 28
braced_instructions  : 73 74
break_instruction    : 11
constant             : 26
continue_instruction : 12
else_if_instruction  : 69 70 72
eol_instruction      : 
expression           : 14 23 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 49 50 51 51 52 57 58 61 66 67 68 69 70 71 72 73 75 75
if_instruction       : 8
instruction          : 2 3 4 6
instructions         : 1 2 5 67 68 68 69 70 70 71 72
iteration_instruction : 9
matrix_init          : 29
print_instruction    : 13
program              : 0
range_expression     : 74
return_instruction   : 10
row                  : 53 54 55 56 57
rows                 : 53 55
string_expression    : 63 64
string_expressions   : 62 63
unary_expr           : 27
variable             : 14 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (7) instruction -> . assign
    (8) instruction -> . if_instruction
    (9) instruction -> . iteration_instruction
    (10) instruction -> . return_instruction
    (11) instruction -> . break_instruction
    (12) instruction -> . continue_instruction
    (13) instruction -> . print_instruction
    (14) assign -> . variable assign_op expression
    (67) if_instruction -> . IF ( expression ) instructions
    (68) if_instruction -> . IF ( expression ) instructions ELSE instructions
    (69) if_instruction -> . IF ( expression ) instructions else_if_instruction
    (70) if_instruction -> . IF ( expression ) instructions else_if_instruction ELSE instructions
    (73) iteration_instruction -> . WHILE ( expression ) braced_instructions
    (74) iteration_instruction -> . FOR range_expression braced_instructions
    (61) return_instruction -> . RETURN expression ;
    (59) break_instruction -> . BREAK ;
    (60) continue_instruction -> . CONTINUE ;
    (62) print_instruction -> . PRINT string_expressions ;
    (20) variable -> . ID
    (21) variable -> . ID [ array_ref ]

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assign                         shift and go to state 4
    if_instruction                 shift and go to state 5
    iteration_instruction          shift and go to state 6
    return_instruction             shift and go to state 7
    break_instruction              shift and go to state 8
    continue_instruction           shift and go to state 9
    print_instruction              shift and go to state 10
    variable                       shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (7) instruction -> . assign
    (8) instruction -> . if_instruction
    (9) instruction -> . iteration_instruction
    (10) instruction -> . return_instruction
    (11) instruction -> . break_instruction
    (12) instruction -> . continue_instruction
    (13) instruction -> . print_instruction
    (14) assign -> . variable assign_op expression
    (67) if_instruction -> . IF ( expression ) instructions
    (68) if_instruction -> . IF ( expression ) instructions ELSE instructions
    (69) if_instruction -> . IF ( expression ) instructions else_if_instruction
    (70) if_instruction -> . IF ( expression ) instructions else_if_instruction ELSE instructions
    (73) iteration_instruction -> . WHILE ( expression ) braced_instructions
    (74) iteration_instruction -> . FOR range_expression braced_instructions
    (61) return_instruction -> . RETURN expression ;
    (59) break_instruction -> . BREAK ;
    (60) continue_instruction -> . CONTINUE ;
    (62) print_instruction -> . PRINT string_expressions ;
    (20) variable -> . ID
    (21) variable -> . ID [ array_ref ]

    $end            reduce using rule 1 (program -> instructions .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    instruction                    shift and go to state 20
    assign                         shift and go to state 4
    if_instruction                 shift and go to state 5
    iteration_instruction          shift and go to state 6
    return_instruction             shift and go to state 7
    break_instruction              shift and go to state 8
    continue_instruction           shift and go to state 9
    print_instruction              shift and go to state 10
    variable                       shift and go to state 11

state 3

    (3) instructions -> instruction .

    IF              reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)
    ELSE            reduce using rule 3 (instructions -> instruction .)
    ;               reduce using rule 3 (instructions -> instruction .)


state 4

    (7) instruction -> assign .

    IF              reduce using rule 7 (instruction -> assign .)
    WHILE           reduce using rule 7 (instruction -> assign .)
    FOR             reduce using rule 7 (instruction -> assign .)
    RETURN          reduce using rule 7 (instruction -> assign .)
    BREAK           reduce using rule 7 (instruction -> assign .)
    CONTINUE        reduce using rule 7 (instruction -> assign .)
    PRINT           reduce using rule 7 (instruction -> assign .)
    ID              reduce using rule 7 (instruction -> assign .)
    $end            reduce using rule 7 (instruction -> assign .)
    ;               reduce using rule 7 (instruction -> assign .)
    }               reduce using rule 7 (instruction -> assign .)
    ELSE            reduce using rule 7 (instruction -> assign .)


state 5

    (8) instruction -> if_instruction .

    IF              reduce using rule 8 (instruction -> if_instruction .)
    WHILE           reduce using rule 8 (instruction -> if_instruction .)
    FOR             reduce using rule 8 (instruction -> if_instruction .)
    RETURN          reduce using rule 8 (instruction -> if_instruction .)
    BREAK           reduce using rule 8 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> if_instruction .)
    PRINT           reduce using rule 8 (instruction -> if_instruction .)
    ID              reduce using rule 8 (instruction -> if_instruction .)
    $end            reduce using rule 8 (instruction -> if_instruction .)
    ;               reduce using rule 8 (instruction -> if_instruction .)
    }               reduce using rule 8 (instruction -> if_instruction .)
    ELSE            reduce using rule 8 (instruction -> if_instruction .)


state 6

    (9) instruction -> iteration_instruction .

    IF              reduce using rule 9 (instruction -> iteration_instruction .)
    WHILE           reduce using rule 9 (instruction -> iteration_instruction .)
    FOR             reduce using rule 9 (instruction -> iteration_instruction .)
    RETURN          reduce using rule 9 (instruction -> iteration_instruction .)
    BREAK           reduce using rule 9 (instruction -> iteration_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> iteration_instruction .)
    PRINT           reduce using rule 9 (instruction -> iteration_instruction .)
    ID              reduce using rule 9 (instruction -> iteration_instruction .)
    $end            reduce using rule 9 (instruction -> iteration_instruction .)
    ;               reduce using rule 9 (instruction -> iteration_instruction .)
    }               reduce using rule 9 (instruction -> iteration_instruction .)
    ELSE            reduce using rule 9 (instruction -> iteration_instruction .)


state 7

    (10) instruction -> return_instruction .

    IF              reduce using rule 10 (instruction -> return_instruction .)
    WHILE           reduce using rule 10 (instruction -> return_instruction .)
    FOR             reduce using rule 10 (instruction -> return_instruction .)
    RETURN          reduce using rule 10 (instruction -> return_instruction .)
    BREAK           reduce using rule 10 (instruction -> return_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> return_instruction .)
    PRINT           reduce using rule 10 (instruction -> return_instruction .)
    ID              reduce using rule 10 (instruction -> return_instruction .)
    $end            reduce using rule 10 (instruction -> return_instruction .)
    ;               reduce using rule 10 (instruction -> return_instruction .)
    }               reduce using rule 10 (instruction -> return_instruction .)
    ELSE            reduce using rule 10 (instruction -> return_instruction .)


state 8

    (11) instruction -> break_instruction .

    IF              reduce using rule 11 (instruction -> break_instruction .)
    WHILE           reduce using rule 11 (instruction -> break_instruction .)
    FOR             reduce using rule 11 (instruction -> break_instruction .)
    RETURN          reduce using rule 11 (instruction -> break_instruction .)
    BREAK           reduce using rule 11 (instruction -> break_instruction .)
    CONTINUE        reduce using rule 11 (instruction -> break_instruction .)
    PRINT           reduce using rule 11 (instruction -> break_instruction .)
    ID              reduce using rule 11 (instruction -> break_instruction .)
    $end            reduce using rule 11 (instruction -> break_instruction .)
    ;               reduce using rule 11 (instruction -> break_instruction .)
    }               reduce using rule 11 (instruction -> break_instruction .)
    ELSE            reduce using rule 11 (instruction -> break_instruction .)


state 9

    (12) instruction -> continue_instruction .

    IF              reduce using rule 12 (instruction -> continue_instruction .)
    WHILE           reduce using rule 12 (instruction -> continue_instruction .)
    FOR             reduce using rule 12 (instruction -> continue_instruction .)
    RETURN          reduce using rule 12 (instruction -> continue_instruction .)
    BREAK           reduce using rule 12 (instruction -> continue_instruction .)
    CONTINUE        reduce using rule 12 (instruction -> continue_instruction .)
    PRINT           reduce using rule 12 (instruction -> continue_instruction .)
    ID              reduce using rule 12 (instruction -> continue_instruction .)
    $end            reduce using rule 12 (instruction -> continue_instruction .)
    ;               reduce using rule 12 (instruction -> continue_instruction .)
    }               reduce using rule 12 (instruction -> continue_instruction .)
    ELSE            reduce using rule 12 (instruction -> continue_instruction .)


state 10

    (13) instruction -> print_instruction .

    IF              reduce using rule 13 (instruction -> print_instruction .)
    WHILE           reduce using rule 13 (instruction -> print_instruction .)
    FOR             reduce using rule 13 (instruction -> print_instruction .)
    RETURN          reduce using rule 13 (instruction -> print_instruction .)
    BREAK           reduce using rule 13 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 13 (instruction -> print_instruction .)
    PRINT           reduce using rule 13 (instruction -> print_instruction .)
    ID              reduce using rule 13 (instruction -> print_instruction .)
    $end            reduce using rule 13 (instruction -> print_instruction .)
    ;               reduce using rule 13 (instruction -> print_instruction .)
    }               reduce using rule 13 (instruction -> print_instruction .)
    ELSE            reduce using rule 13 (instruction -> print_instruction .)


state 11

    (14) assign -> variable . assign_op expression
    (15) assign_op -> . =
    (16) assign_op -> . ADDASSIGN
    (17) assign_op -> . SUBASSIGN
    (18) assign_op -> . MULASSIGN
    (19) assign_op -> . DIVASSIGN

    =               shift and go to state 22
    ADDASSIGN       shift and go to state 23
    SUBASSIGN       shift and go to state 24
    MULASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26

    assign_op                      shift and go to state 21

state 12

    (67) if_instruction -> IF . ( expression ) instructions
    (68) if_instruction -> IF . ( expression ) instructions ELSE instructions
    (69) if_instruction -> IF . ( expression ) instructions else_if_instruction
    (70) if_instruction -> IF . ( expression ) instructions else_if_instruction ELSE instructions

    (               shift and go to state 27


state 13

    (73) iteration_instruction -> WHILE . ( expression ) braced_instructions

    (               shift and go to state 28


state 14

    (74) iteration_instruction -> FOR . range_expression braced_instructions
    (75) range_expression -> . ID = expression : expression

    ID              shift and go to state 30

    range_expression               shift and go to state 29

state 15

    (61) return_instruction -> RETURN . expression ;
    (25) expression -> . variable
    (26) expression -> . constant
    (27) expression -> . unary_expr
    (28) expression -> . binary_expr
    (29) expression -> . matrix_init
    (20) variable -> . ID
    (21) variable -> . ID [ array_ref ]
    (30) constant -> . INT
    (31) constant -> . FLOAT
    (32) unary_expr -> . - expression
    (33) unary_expr -> . expression TRANSP
    (34) binary_expr -> . expression + expression
    (35) binary_expr -> . expression - expression
    (36) binary_expr -> . expression * expression
    (37) binary_expr -> . expression / expression
    (38) binary_expr -> . expression > expression
    (39) binary_expr -> . expression < expression
    (40) binary_expr -> . expression EQUAL expression
    (41) binary_expr -> . expression NOTEQUAL expression
    (42) binary_expr -> . expression LESSEQUAL expression
    (43) binary_expr -> . expression GREATEREQUAL expression
    (44) binary_expr -> . expression DOTADD expression
    (45) binary_expr -> . expression DOTSUB expression
    (46) binary_expr -> . expression DOTMUL expression
    (47) binary_expr -> . expression DOTDIV expression
    (48) matrix_init -> . ZEROS ( expression )
    (49) matrix_init -> . ZEROS ( expression , expression )
    (50) matrix_init -> . ONES ( expression )
    (51) matrix_init -> . ONES ( expression , expression )
    (52) matrix_init -> . EYE ( expression )
    (53) matrix_init -> . [ rows ; row ]
    (54) matrix_init -> . [ row ]

    ID              shift and go to state 19
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    -               shift and go to state 40
    ZEROS           shift and go to state 41
    ONES            shift and go to state 42
    EYE             shift and go to state 43
    [               shift and go to state 37

    expression                     shift and go to state 31
    variable                       shift and go to state 32
    constant                       shift and go to state 33
    unary_expr                     shift and go to state 34
    binary_expr                    shift and go to state 35
    matrix_init                    shift and go to state 36

state 16

    (59) break_instruction -> BREAK . ;

    ;               shift and go to state 44


state 17

    (60) continue_instruction -> CONTINUE . ;

    ;               shift and go to state 45


state 18

    (62) print_instruction -> PRINT . string_expressions ;
    (63) string_expressions -> . string_expressions , string_expression
    (64) string_expressions -> . string_expression
    (65) string_expression -> . STRING
    (66) string_expression -> . expression
    (25) expression -> . variable
    (26) expression -> . constant
    (27) expression -> . unary_expr
    (28) expression -> . binary_expr
    (29) expression -> . matrix_init
    (20) variable -> . ID
    (21) variable -> . ID [ array_ref ]
    (30) constant -> . INT
    (31) constant -> . FLOAT
    (32) unary_expr -> . - expression
    (33) unary_expr -> . expression TRANSP
    (34) binary_expr -> . expression + expression
    (35) binary_expr -> . expression - expression
    (36) binary_expr -> . expression * expression
    (37) binary_expr -> . expression / expression
    (38) binary_expr -> . expression > expression
    (39) binary_expr -> . expression < expression
    (40) binary_expr -> . expression EQUAL expression
    (41) binary_expr -> . expression NOTEQUAL expression
    (42) binary_expr -> . expression LESSEQUAL expression
    (43) binary_expr -> . expression GREATEREQUAL expression
    (44) binary_expr -> . expression DOTADD expression
    (45) binary_expr -> . expression DOTSUB expression
    (46) binary_expr -> . expression DOTMUL expression
    (47) binary_expr -> . expression DOTDIV expression
    (48) matrix_init -> . ZEROS ( expression )
    (49) matrix_init -> . ZEROS ( expression , expression )
    (50) matrix_init -> . ONES ( expression )
    (51) matrix_init -> . ONES ( expression , expression )
    (52) matrix_init -> . EYE ( expression )
    (53) matrix_init -> . [ rows ; row ]
    (54) matrix_init -> . [ row ]

    STRING          shift and go to state 48
    ID              shift and go to state 19
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    -               shift and go to state 40
    ZEROS           shift and go to state 41
    ONES            shift and go to state 42
    EYE             shift and go to state 43
    [               shift and go to state 37

    string_expressions             shift and go to state 46
    string_expression              shift and go to state 47
    expression                     shift and go to state 49
    variable                       shift and go to state 32
    constant                       shift and go to state 33
    unary_expr                     shift and go to state 34
    binary_expr                    shift and go to state 35
    matrix_init                    shift and go to state 36

state 19

    (20) variable -> ID .
    (21) variable -> ID . [ array_ref ]

    =               reduce using rule 20 (variable -> ID .)
    ADDASSIGN       reduce using rule 20 (variable -> ID .)
    SUBASSIGN       reduce using rule 20 (variable -> ID .)
    MULASSIGN       reduce using rule 20 (variable -> ID .)
    DIVASSIGN       reduce using rule 20 (variable -> ID .)
    ;               reduce using rule 20 (variable -> ID .)
    TRANSP          reduce using rule 20 (variable -> ID .)
    +               reduce using rule 20 (variable -> ID .)
    -               reduce using rule 20 (variable -> ID .)
    *               reduce using rule 20 (variable -> ID .)
    /               reduce using rule 20 (variable -> ID .)
    >               reduce using rule 20 (variable -> ID .)
    <               reduce using rule 20 (variable -> ID .)
    EQUAL           reduce using rule 20 (variable -> ID .)
    NOTEQUAL        reduce using rule 20 (variable -> ID .)
    LESSEQUAL       reduce using rule 20 (variable -> ID .)
    GREATEREQUAL    reduce using rule 20 (variable -> ID .)
    DOTADD          reduce using rule 20 (variable -> ID .)
    DOTSUB          reduce using rule 20 (variable -> ID .)
    DOTMUL          reduce using rule 20 (variable -> ID .)
    DOTDIV          reduce using rule 20 (variable -> ID .)
    ,               reduce using rule 20 (variable -> ID .)
    IF              reduce using rule 20 (variable -> ID .)
    WHILE           reduce using rule 20 (variable -> ID .)
    FOR             reduce using rule 20 (variable -> ID .)
    RETURN          reduce using rule 20 (variable -> ID .)
    BREAK           reduce using rule 20 (variable -> ID .)
    CONTINUE        reduce using rule 20 (variable -> ID .)
    PRINT           reduce using rule 20 (variable -> ID .)
    ID              reduce using rule 20 (variable -> ID .)
    $end            reduce using rule 20 (variable -> ID .)
    }               reduce using rule 20 (variable -> ID .)
    ELSE            reduce using rule 20 (variable -> ID .)
    )               reduce using rule 20 (variable -> ID .)
    ]               reduce using rule 20 (variable -> ID .)
    :               reduce using rule 20 (variable -> ID .)
    {               reduce using rule 20 (variable -> ID .)
    [               shift and go to state 50


state 20

    (2) instructions -> instructions instruction .

    IF              reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)
    ELSE            reduce using rule 2 (instructions -> instructions instruction .)
    ;               reduce using rule 2 (instructions -> instructions instruction .)


state 21

    (14) assign -> variable assign_op . expression
    (25) expression -> . variable
    (26) expression -> . constant
    (27) expression -> . unary_expr
    (28) expression -> . binary_expr
    (29) expression -> . matrix_init
    (20) variable -> . ID
    (21) variable -> . ID [ array_ref ]
    (30) constant -> . INT
    (31) constant -> . FLOAT
    (32) unary_expr -> . - expression
    (33) unary_expr -> . expression TRANSP
    (34) binary_expr -> . expression + expression
    (35) binary_expr -> . expression - expression
    (36) binary_expr -> . expression * expression
    (37) binary_expr -> . expression / expression
    (38) binary_expr -> . expression > expression
    (39) binary_expr -> . expression < expression
    (40) binary_expr -> . expression EQUAL expression
    (41) binary_expr -> . expression NOTEQUAL expression
    (42) binary_expr -> . expression LESSEQUAL expression
    (43) binary_expr -> . expression GREATEREQUAL expression
    (44) binary_expr -> . expression DOTADD expression
    (45) binary_expr -> . expression DOTSUB expression
    (46) binary_expr -> . expression DOTMUL expression
    (47) binary_expr -> . expression DOTDIV expression
    (48) matrix_init -> . ZEROS ( expression )
    (49) matrix_init -> . ZEROS ( expression , expression )
    (50) matrix_init -> . ONES ( expression )
    (51) matrix_init -> . ONES ( expression , expression )
    (52) matrix_init -> . EYE ( expression )
    (53) matrix_init -> . [ rows ; row ]
    (54) matrix_init -> . [ row ]

    ID              shift and go to state 19
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    -               shift and go to state 40
    ZEROS           shift and go to state 41
    ONES            shift and go to state 42
    EYE             shift and go to state 43
    [               shift and go to state 37

    variable                       shift and go to state 32
    expression                     shift and go to state 51
    constant                       shift and go to state 33
    unary_expr                     shift and go to state 34
    binary_expr                    shift and go to state 35
    matrix_init                    shift and go to state 36

state 22

    (15) assign_op -> = .
